# CuraEngine_plugin_gradual_flow

./: .gitignore  CMakeLists.txt  README.md  conanbuildinfo.txt  conandata.yml  conanfile.py  conaninfo.txt
.github/workflows/: conan-package.yml  linux.yml  macos.yml  release.yml  unit-test.yml  windows.yml
CuraEngineGradualFlow/: GradualFlowPlugin.py  __init__.py  gradual_flow_settings.def.json  plugin.json
include/gradual_flow/: boost_tags.h  concepts.h  gcode_path.h  point_container.h  utils.h
include/plugin/: broadcast.h  cmdline.h  handshake.h  metadata.h  modify.h  plugin.h  settings.h
src/: main.cpp
templates/cura_plugin/: bundled.json.jinja  package.json.jinja  plugin.json.jinja
templates/include/plugin/: cmdline.h.jinja
tests/: CMakeLists.txt  main.cpp
